assets/scss/_profile.scss
/**
* Shared across all screen sizes
* See individual styles for mobile/tablet/desktop below
*/
.section.profile {
  position: relative;
  padding: 3rem 1.5rem 5rem 1.5rem;

  article.container {
    position: relative;

    h1.title {
      text-transform: uppercase;
      font-size: 2rem;
      font-weight: 700;
      letter-spacing: 0.1em;
      position: relative;
      display: inline;
      color: #00d1b2;
    }

    .image {
      img {
        border: 10px solid $green;
      }
    }

    .factsheet {
      font-size: 0.9rem;
      background: #00d1b2;
      color: white;
      padding: 20px;

      div {
        margin-bottom: 5px;
      }

      b {
        text-transform: uppercase;
        font-weight: 500;
        display: inline-block;
        letter-spacing: 0.01rem;
      }

      a {
        color: #ffffff;
      }

      a:hover {
        text-decoration: underline;
      }
    }

    .content {
      p,
      ul li {
        font-size: 1.2rem;
      }

      h1 {
        font-size: 1.4rem;
        line-height: 1.9rem;
        position: relative;
        display: inline-block;

        &:after {
          content: "";
          display: block;
          position: absolute;
          bottom: -5px;
          left: 0;
          background: rgba(0, 209, 178, 0.8);
          width: 100%;
          height: 5px;
        }

        & + p {
          margin-top: 20px;
        }
      }
    }

    .contact {
      position: relative;
      font-weight: 600;
      text-transform: uppercase;
      letter-spacing: 0.1em;
      font-size: 0.8rem;
      text-align: right;
      overflow: hidden;

      a {
        color: #4a4a4a;
        text-decoration: underline;
        padding-bottom: 15px;
        display: block;
        position: relative;
      }

      a:hover {
        text-decoration: none;
      }

      &:before {
        content: "";
        position: absolute;
        top: 0;
        right: -30px;
        display: block;
        background: repeating-linear-gradient(
          45deg,
          transparent,
          transparent 10px,
          #ccc 10px,
          #ccc 20px
        );
        transform: skewX(-20deg);
        background-color: transparent;
        opacity: 0.2;
        height: 200px;
        width: 100%;
      }

      .social-icon {
        padding-left: 5px;
      }
    }

    .footer-nav {
      text-align: center;
      font-size: 1rem;
      padding-top: 1rem;
    }
  }
}

/**
* desktop screens
*/
@media only screen and (min-width: 860px) {
  .section.profile {
    article.container {
      background-color: #fff;
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12),
        0 2px 4px 0 rgba(0, 0, 0, 0.08);
      padding: 60px 40px 40px 40px;
      margin-top: 50px;
      margin-bottom: 0;

      h1.title {
        background-color: #ffffff;
      }

      .image {
        position: absolute;
        right: -10px;
        top: -20px;
        transform: rotate(10deg);
        max-width: 200px;
        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
      }

      .factsheet {
        width: 50%;
        margin-top: 50px;
        margin-left: -70px;
        padding: 30px 30px 30px 60px;

        div {
          margin-bottom: 5px;
        }
      }

      .content {
        margin-top: 50px;
        max-width: 70%;
      }

      .contact {
        position: absolute;
        right: 0;
        top: 300px;
        overflow: hidden;
        width: 20%;
        height: 200px;
        padding: 20px 10px 0 0;
      }
    }
  }
}

/**
* tablet screens screens
*/
@media only screen and (min-width: 501px) and (max-width: 859px) {
  .section.profile {
    background: #ffffff;
    padding-top: 20px;

    article.container {
      padding-top: 30px;

      h1.title {
        width: 100%;
        display: inline-block;
        margin-bottom: 50px;
      }

      .image {
        float: right;
        right: -20px;
        top: -20px;
        width: 40%;
        transform: rotate(10deg);
        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);

        img {
          border-size: 5px;
        }
      }

      .factsheet {
        width: 60%;

        div {
          margin-bottom: 5px;
        }
      }

      .content {
        margin-top: 30px;
      }

      .contact {
        background-color: #ffffff;
        position: relative;
        width: 100%;
        padding: 20px;
        right: -20px;
      }
    }
  }
}

/**
* larger tablet / small desktop screens
*/
@media only screen and (min-width: 600px) and (max-width: 859px) {
  .section.profile {
    article.container {
      .image {
        width: 30%;
        right: 20px;
      }
    }
  }
}

/**
* mobile screens
*/
@media only screen and (max-width: $mobile-breakpoint) {
  .section.profile {
    padding: 10px 0 0 0;

    article.container {
      padding-top: 30px;

      h1.title {
        display: inline-block;
        padding-left: 20px;
      }

      .image {
        text-align: right;
        overflow: hidden;
        background-color: $green;
        margin-bottom: -20px;
        img {
          width: 60%;
          display: inline-block;
          transform: rotate(5deg);
          position: relative;
          right: -15px;
          top: -20px;
          border: none;
        }
      }

      .content {
        background-color: #fff;
        padding: 20px;
        margin-bottom: 0;
      }

      .contact {
        background-color: #ffffff;
        width: 100%;
        padding: 20px;

        &:before {
          width: 80%;
          overflow: hidden;
        }
      }
    }
  }
}

